# Blinn-Phong-Raytracer

./: CMakeLists.txt  Makefile  cornell_128x128_128.ppm  cornell_128x128_64.ppm  cornell_256_256_64.ppm  cornell_256x256_50.ppm  cornell_256x256_8.ppm  main.cpp  readme.txt
src/: Camera.h  Color.h  Light.h  Matrix4x4.cpp  Matrix4x4.h  Point.h  Ray.h  Render.cpp  Render.h  Triangle.h  Vector.h  Vertex.h  World.h
